--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -15,91 +15,80 @@
 "var order.getEmailCustomerNote()":"Email Order Note"}
 @-->
 <!--@styles
-body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
+td {
+	padding: 10px 8px 2px;
+	vertical-align:top;
+}
+body, p {
+	font-family: arial, sans-serif;
+	font-size: 13px;
+	line-height: 15px;
+	color: #373737;
+}
+
+table {
+	border-collapse:collapse;
+	width:100%;	
+}
+
+a {
+	text-decoration:underline;
+	color: #181818;
+}
+.order-specs td {
+	padding: 10px 8px 10px;
+}
+
+#wrapper {
+	width: 650px;
+}
+
+.logo {
+background-color:#50305f;
+}
+
+.item-info{
+	color: #50305f;
+	font-weight: bold;
+	font-size: 14px;
+}
+.purchase-header {
+	color: white;
+	background-color: #412647;
+	height: 40px;
+	font-size:14px;
+	font-weight:bold;
+}
+.order-specs {
+	background-color:#e2e2e2;
+	width:100%;
+}
+
+.thanks {padding-top: 20px;}
+
+.centered {
+	margin: 0 auto;
+}
+
+.smaller {
+	width: 90%;
+}
+
+.smallest {
+	width: 88%;
+}
+.costs {
+	width:40%;
+	margin-left: 60%;
+	padding-bottom: 30px;
+}
 @-->
 
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
 <html xmlns="http://www.w3.org/1999/xhtml"  xml:lang="en" lang="en" dir="ltr"> 
 <head>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-
-	<style type="text/css">
-	
-	td {
-		padding: 10px 8px 2px;
-		vertical-align:top;
-	}
-	body, p {
-		font-family: arial, sans-serif;
-		font-size: 13px;
-		line-height: 15px;
-		color: #373737;
-	}
-	
-	table {
-		border-collapse:collapse;
-		width:100%;	
-	}
-	
-	a {
-		text-decoration:underline;
-		color: #181818;
-	}
-	.order-specs td {
-		padding: 10px 8px 10px;
-	}
-	
-	#wrapper {
-		width: 650px;
-	}
-
-	.logo {
-	background-color:#50305f;
-	}
-
-	.item-info{
-		color: #50305f;
-		font-weight: bold;
-		font-size: 14px;
-	}
-	.purchase-header {
-		color: white;
-		background-color: #412647;
-		height: 40px;
-		font-size:14px;
-		font-weight:bold;
-	}
-	.order-specs {
-		background-color:#e2e2e2;
-		width:100%;
-	}
-	
-	.thanks {padding-top: 20px;}
-	
-	.centered {
-		margin: 0 auto;
-	}
-	
-	.smaller {
-		width: 90%;
-	}
-	
-	.smallest {
-		width: 88%;
-	}
-	.costs {
-		width:40%;
-		margin-left: 60%;
-		padding-bottom: 30px;
-	}
-	
-/*	div, table{
-		border:1px solid #ff0000;
-	}*/
-
-	</style>
-	
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />	
 </head>
 <body>
 <div id="wrapper">
@@ -110,7 +99,7 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
 		</table>
 
 	<div class="centered smaller">
-				<div class="centered thanks"><img src="thanks.jpg" alt="Thanks for your purchase!" /></div>
+				<div class="centered thanks"><img src="{{skin url="images/email/thanks.jpg" _area='frontend'}}" alt="Thanks for your purchase!" /></div>
 		<table class="order-specs">
 			<tr class="purchase-header">
 				<td>Order Number</td>
@@ -131,7 +120,7 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
 			</tr>
 		</table>
 		
-			<img src="break.jpg" />
+			<img src="{{skin url="images/email/break.jpg" _area='frontend'}}" />
 	</div>
 	
 		<div class="costs"> 
