--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -108,15 +108,41 @@ background-color:#50305f;
 			</tr>
 		
 			<tr>
-				<td>29408</td>
-				<td>February 17, 2011</td>
+				<td>{{var order.increment_id}}</td>
+				<td>{{var order.getCreatedAtFormated('long')}}</td>
 				<td>{{var order.shipping_address.format('html')}</td>
 			</tr>		
 		</table>
 
 		<table>
 			<tr class="item-info">
-                    {{layout handle="sales_email_order_items" order=$order}}
+                   	{{depend order.getIsNotVirtual()}}
+                   <table cellspacing="0" cellpadding="0" border="0" width="650">
+                       <thead>
+                       <tr>
+                           <th align="left" width="325" bgcolor="#EAEAEA" style="font-size:13px; padding:5px 9px 6px 9px; line-height:1em;">Shipping Information:</th>
+                           <th width="10"></th>
+                           <th align="left" width="325" bgcolor="#EAEAEA" style="font-size:13px; padding:5px 9px 6px 9px; line-height:1em;">Shipping Method:</th>
+                       </tr>
+                       </thead>
+                       <tbody>
+                       <tr>
+                           <td valign="top" style="font-size:12px; padding:7px 9px 9px 9px; border-left:1px solid #EAEAEA; border-bottom:1px solid #EAEAEA; border-right:1px solid #EAEAEA;">
+                               {{var order.getShippingAddress().format('html')}}
+                               &nbsp;
+                           </td>
+                           <td>&nbsp;</td>
+                           <td valign="top" style="font-size:12px; padding:7px 9px 9px 9px; border-left:1px solid #EAEAEA; border-bottom:1px solid #EAEAEA; border-right:1px solid #EAEAEA;">
+                               {{var order.getShippingDescription()}}
+                               &nbsp;
+                           </td>
+                       </tr>
+                       </tbody>
+                   </table>
+                   <br/>
+                   {{/depend}}
+                   {{layout handle="sales_email_order_items" order=$order}}
+                   <p style="font-size:12px; margin:0 0 10px 0">{{var order.getEmailCustomerNote()}}</p>
 			</tr>
 		</table>
 		
