--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -78,6 +78,10 @@ a {
 	margin-left: 60%;
 	padding-bottom: 30px;
 }
+
+table, div {
+border:1px solid #ff0000;
+}
 @-->
 
 
@@ -87,7 +91,9 @@ a {
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />	
 </head>
 <body>
-		<table style="margin-left:auto; margin-right:auto;">
+	
+	<div style="margin-left:auto; margin-right:auto;">
+		<table>
 			<tr>
 				<td style="background:#50305f;"><img src="{{skin url="images/email/logo.jpg" _area='frontend'}}" alt="rooja"/></td>
 			</tr>
