--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -170,6 +170,7 @@ border:1px solid #ff0000;
 		Questions about your order? Contact us at <a href="mailto:contact@rooja.com">contact@rooja.com</a> or call us at (888) 767-4482.
 		</div>
 	</div>
+	</div>
 	
 </body>
 </html>
