one click checout

--- a/skin/frontend/base/default/css/oneclickcartcheckout/oneclickcartcheckout.css
+++ b/skin/frontend/base/default/css/oneclickcartcheckout/oneclickcartcheckout.css
@@ -1,3 +1,5 @@
+#checkoutform {width: 980px;}
+
 .cart_checkout_table {width:100%}
 .cart_checkout_table td {padding:5px}
 .cart_checkout_table td.billing_section {
