--- a/app/design/frontend/base/default/template/oneclickcartcheckout/cart/checkout.phtml
+++ b/app/design/frontend/base/default/template/oneclickcartcheckout/cart/checkout.phtml
@@ -12,9 +12,10 @@ var review = new Review("<?php echo $this->getUrl('oneclickcartcheckout/checkout
 
 </script>
 
+
 <?php if(!$this->canCheckout() ): ?>
     <?php if($this->canCheckout() ): ?>
-	<div style="width: 980px;">
+<div id="one-con" style="width: 980px;">
     <p><?php echo Mage::getStoreConfig('sales/minimum_order/description'); ?></p>
     <p><a href="<?php echo $this->getUrl(''); ?>"><?php echo $this->__('Back to homepage'); ?></a></p>    
     <?php else: ?>
@@ -65,7 +66,7 @@ var review = new Review("<?php echo $this->getUrl('oneclickcartcheckout/checkout
     
     </ol>
     </form>
-</div>
+
     
 
     		
@@ -90,6 +91,8 @@ var review = new Review("<?php echo $this->getUrl('oneclickcartcheckout/checkout
     //]]>
     
     </script>
+
+</div>
 <?php endif;?>
 
 
