--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -103,4 +103,10 @@
     
     </script>
     </div>
+
+	<section id="commentsRelated">
+	 	<section id="related" class="container">
+	 	<h2>Wear it with</h2>
+	                <?php echo $this->getChildHtml('crosssell') ?>
+	 	</section>
     <?php endif;?>
