--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -53,13 +53,14 @@
             </li>
             </td>
             <?php
-             if(Mage::getStoreConfig('checkout/oneclickcartcheckout/comment_status')!=1):?>
-          <td>                              
-             <li class="section active section-comment">
-                            <?=$this->getChildHtml("order_comment")?>
-                        </li>
-           </td>
-           <?php endif;?>
+			//no need for this object
+             //if(Mage::getStoreConfig('checkout/oneclickcartcheckout/comment_status')!=1):?>
+          <!-- <td>                              
+                       <li class="section active section-comment">
+                                      <?=$this->getChildHtml("order_comment")?>
+                                  </li>
+                     </td> -->
+           <?php //endif;?>
             <td>
               <li class="section active section-coupon" id="coupon-section">
                  <?=$this->getChildHtml("coupon2")?>
