removed numbers and fixed titles in one step checkout

--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/billing.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/billing.phtml
@@ -1,6 +1,5 @@
 <div class="step-title">
-            <span class="number">1</span>
-                <h2><?=$this->__("Billing Information")?></h2>
+                <h2><?=$this->__("Billing Address")?></h2>
             
             </div>
 <div class="step">
