--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/shipping.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/shipping.phtml
@@ -1,6 +1,5 @@
 <div class="step-title">
-            <span class="number">1.2</span>
-                <h2><?=$this->__("Shipping Information")?></h2>
+                <h2><?=$this->__("Shipping Address")?></h2>
             
             </div>
 <div class="step">
