--- a/skin/frontend/default/rooja/css/styles.css
+++ b/skin/frontend/default/rooja/css/styles.css
@@ -1093,7 +1093,7 @@ form#discount-coupon-form .discount h2, .shipping h2  {font-size:14px;margin: 0 
 
 .opc .active {}
 .opc .active .step-title {background-color:#fff; cursor:default; }
-.opc .active .step-title h2 {color:#431f4b;}
+.opc .active .step-title h2 {margin: 9px 0 -5px -14px; color:#431f4b;}
 /*.opc .active .step-title a { display:none; }*/
 
 .opc .step { margin: 10px 0; background:#e0e0e0;border-top:1px solid #ddd; padding:10px; position:relative; }
