combine shipping method + payment method

--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/checkout.phtml
@@ -28,11 +28,11 @@
             </td>
         </tr>
         <tr>
-            <td>
-            <li class="section active" id="shipping_method_section">
-            	<?=$this->getChildHtml("shipping_method")?>
-            </li>
-            </td>
+            <!-- <td>
+				<li class="section active" id="shipping_method_section">
+            	<//?=$this->getChildHtml("shipping_method")?>
+            </li> 
+            </td> -->
           <td>                              
              <li class="section active section-comment">
 			            	<?=$this->getChildHtml("order_comment")?>
