combine shipping method + payment method

--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/payment.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/payment.phtml
@@ -41,6 +41,9 @@
 <div class="tool-tip" id="payment-tool-tip" style="display:none;">
     <div class="btn-close"><a href="#" id="payment-tool-tip-close" title="<?php echo $this->__('Close') ?>"><?php echo $this->__('Close') ?></a></div>
     <div class="tool-tip-content"><img src="<?php echo $this->getSkinUrl('images/cvv.gif') ?>" alt="<?php echo $this->__('Card Verification Number Visual Reference') ?>" title="<?php echo $this->__('Card Verification Number Visual Reference') ?>" /></div>
+
+	       <?=$this->getChildHtml("shipping_method")?>
+	
 </div> 
 
 <script type="text/javascript">
