--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/shipping_methods.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/shipping_methods.phtml
@@ -1,18 +1,9 @@
-<div class="step-title">
-                <h2><?=$this->__("Shipping Method")?></h2>
-            </div>
-<div class="step">
+<h4><?=$this->__("Delivery Preference")?></h4>
 
-    <div id="checkout-shipping-method-load">
-        <?php echo $this->getChildHtml('available') ?>
-    </div>
-    <script type="text/javascript">
+  <?php echo $this->getChildHtml('available') ?>
+      <script type="text/javascript">
     //<![CDATA[
         var shippingMethod = new ShippingMethod('co-shipping-method-form', "<?php echo $this->getUrl('oneclickcartcheckout/checkout/saveShippingMethod') ?>");
     //]]>
     </script>
-    <div id="onepage-checkout-shipping-method-additional-load">
         <?php echo $this->getChildHtml('additional') ?>
-    </div>
-
-</div>
