--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -40,7 +40,16 @@
                       </li> 
 
 			  	<li class="section active">
-                    <?=$this->getChildHtml("payment")?>    
+					<div class="step-title">
+					                <h2><?=$this->__("Payment and Delivery Method")?></h2>
+					            </div>
+					<div class="step">
+				
+                    <?=$this->getChildHtml("payment")?>
+					<h3>Delivery Preference</h3>    
+	                <?=$this->getChildHtml("shipping_method")?>
+					</div>
+					</div>
                 </li>
 		
             </td>
