combine shipping method + payment method

--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -35,8 +35,10 @@
                     <?=$this->getChildHtml("oneclickcartcheckout.billing")?> 
                     <div id="shipping-info" style="display: none;"> 
                     <?php echo $this->getChildHtml("shipping2")?>    
+					<h3>Shipping Address</h3>
+                    <a  id="toggleShipping" onclick="toggleShipping()"><?=$this->__("Shipping address not the same as Billing address?")?></a>
+
                     </div>
-                      <a  id="toggleShipping" onclick="toggleShipping()"><?=$this->__("Shipping address not the same as Billing address?")?></a>
                       </li> 
 
 			  	<li class="section active">
