eliminate 'billing same as shipping' toggle

--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -62,7 +62,7 @@
 			<td>
             <div >
             <?php echo $this->getChildHtml("review")?>
-                <div id='checkoutloader' class='checkoutloader' style="width:100%;height:150px"></div>
+<!--                 <div id='checkoutloader' class='checkoutloader' style="width:100%;height:150px"></div> -->
 
               <li class="section active section-coupon" id="coupon-section">
                  <?=$this->getChildHtml("coupon2")?>
