eliminate 'billing same as shipping' toggle

--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -60,7 +60,10 @@
             </td>
 
 			<td>
-            <div >
+            <div>
+				<div class="step-title">
+				                <h2><?php echo $this->__('Order Review') ?></h2>
+				            </div>
             <?php echo $this->getChildHtml("review")?>
 <!--                 <div id='checkoutloader' class='checkoutloader' style="width:100%;height:150px"></div> -->
 
