--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/payment.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout/payment.phtml
@@ -24,10 +24,6 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div class="step-title">
-                <h2><?=$this->__("Payment and Delivery Method")?></h2>
-            </div>
-<div class="step">
 <script type="text/javascript">
 //<![CDATA[
     var payment = new Payment('co-payment-form', '<?php echo $this->getUrl('checkout/onepage/savePayment') ?>');
@@ -40,9 +36,7 @@
 
 <div class="tool-tip" id="payment-tool-tip" style="display:none;">
     <div class="btn-close"><a href="#" id="payment-tool-tip-close" title="<?php echo $this->__('Close') ?>"><?php echo $this->__('Close') ?></a></div>
-    <div class="tool-tip-content"><img src="<?php echo $this->getSkinUrl('images/cvv.gif') ?>" alt="<?php echo $this->__('Card Verification Number Visual Reference') ?>" title="<?php echo $this->__('Card Verification Number Visual Reference') ?>" /></div>
-	
-</div> 
+    <div class="tool-tip-content"><img src="<?php echo $this->getSkinUrl('images/cvv.gif') ?>" alt="<?php echo $this->__('Card Verification Number Visual Reference') ?>" title="<?php echo $this->__('Card Verification Number Visual Reference') ?>" />
 
 <script type="text/javascript">
 //<![CDATA[
