eliminate 'billing same as shipping' toggle

--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -60,16 +60,15 @@
             </td>
 
 			<td>
-            <div>
+			  	<li class="section active">
 				<div class="step-title">
 				                <h2><?php echo $this->__('Order Review') ?></h2>
 				            </div>
             <?php echo $this->getChildHtml("review")?>
 <!--                 <div id='checkoutloader' class='checkoutloader' style="width:100%;height:150px"></div> -->
 
-              <li class="section active section-coupon" id="coupon-section">
                  <?=$this->getChildHtml("coupon2")?>
-                        </li>
+                 </li>
             </div>
             
            </td>
