--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -47,7 +47,7 @@
 
 			  	<li class="section active">
 					<div class="step-title">
-					    <h2><?=$this->__("Payment and Delivery Method")?></h2>
+					    <h2><?=$this->__("Delivery and Payment Method")?></h2>
 					</div>
 					<div class="step">
 						<h3>Delivery Preference</h3>
